--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^6.0.0",
     "react-select": "^3.1.0",
     "react-table": "^7.5.1"
   },
