--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "axios": "^0.20.0",
     "datasource-sql": "^1.3.0",
     "graphql": "^14.0.2",
+    "history": "^5.1.0",
     "knex": "^0.21.5",
     "lodash": "^4.17.20",
     "next": "^10.0.0",
-    "pg": "^8.3.3",
+    "pg": "^8.7.1",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-router-dom": "^6.0.0",
+    "react-router-dom": "^6.0.2",
     "react-select": "^3.1.0",
     "react-table": "^7.5.1"
   },
