--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-number-format": "^4.8.0",
     "react-router-dom": "^6.0.2",
     "react-select": "^3.1.0",
     "react-table": "^7.5.1"
