--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@apollo/client": "^3.0.2",
     "apollo-server-micro": "^2.14.2",
     "axios": "^0.20.0",
+    "chart.js": "^3.7.0",
     "datasource-sql": "^1.3.0",
     "graphql": "^14.0.2",
     "history": "^5.1.0",
@@ -19,6 +20,7 @@
     "pg": "^8.7.1",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "^16.7.0",
     "react-number-format": "^4.8.0",
     "react-router-dom": "^6.0.2",
