--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^16.7.0",
     "react-number-format": "^4.8.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.0.2",
     "react-select": "^3.1.0",
     "react-table": "^7.5.1"
