--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.20.0",
     "chart.js": "^3.7.0",
     "datasource-sql": "^1.3.0",
+    "export-to-csv": "^0.2.1",
     "graphql": "^14.0.2",
     "history": "^5.1.0",
     "knex": "^0.21.5",
@@ -21,6 +22,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-chartjs-2": "^4.0.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^16.7.0",
     "react-number-format": "^4.8.0",
     "react-reveal": "^1.2.2",
