--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "history": "^5.1.0",
     "knex": "^0.21.5",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "next": "^10.0.0",
     "pg": "^8.7.1",
     "prop-types": "^15.6.2",
